--- a/index.html
+++ b/index.html
@@ -160,10 +160,14 @@
           <div class="detail">
             <div class="description">
               <p class="paragraph">
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi nisi dignissimos debitis ratione sapiente saepe. Accusantium cumque, quas, ut corporis incidunt deserunt quae architecto voluptate.
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi
+                nisi dignissimos debitis ratione sapiente saepe. Accusantium
+                cumque, quas, ut corporis incidunt deserunt quae architecto
+                voluptate.
               </p>
               <p class="paragraph">
-                  Accusantium cumque, quas, ut corporis incidunt deserunt quae architecto voluptate delectus, inventore iure aliquid aliquam.
+                Accusantium cumque, quas, ut corporis incidunt deserunt quae
+                architecto voluptate delectus, inventore iure aliquid aliquam.
               </p>
               <ul class="list">
                 <li class="list__item">Close to the beach</li>
@@ -180,16 +184,80 @@
                   Lucy and 3 other friends recommend this hotel
                 </div>
                 <div class="recommend__friends">
-                  <img src="img/user-3.jpg" alt="Friend 1" class="recommend__photo">
-                  <img src="img/user-4.jpg" alt="Friend 2" class="recommend__photo">
-                  <img src="img/user-5.jpg" alt="Friend 3" class="recommend__photo">
-                  <img src="img/user-6.jpg" alt="Friend 4" class="recommend__photo">
+                  <img
+                    src="img/user-3.jpg"
+                    alt="Friend 1"
+                    class="recommend__photo"
+                  />
+                  <img
+                    src="img/user-4.jpg"
+                    alt="Friend 2"
+                    class="recommend__photo"
+                  />
+                  <img
+                    src="img/user-5.jpg"
+                    alt="Friend 3"
+                    class="recommend__photo"
+                  />
+                  <img
+                    src="img/user-6.jpg"
+                    alt="Friend 4"
+                    class="recommend__photo"
+                  />
                 </div>
               </div>
             </div>
+
             <div class="user-reviews">
-              User reviews
+              <figure class="review">
+                <blockquote class="review__text">
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                  Animi nisi dignissimos debitis ratione sapiente saepe.
+                </blockquote>
+                <figure class="review__user">
+                  <img
+                    src="img/user-1.jpg"
+                    alt="user-1"
+                    class="review__user-photo"
+                  />
+                  <div class="review__user-box">
+                    <p class="review__user-name">Nick Smith</p>
+                    <p class="review__user-date">Aug 24, 2019</p>
+                  </div>
+                  <div class="review__user-rating">8.5</div>
+                </figure>
+              </figure>
+
+              <figure class="review">
+                <blockquote class="review__text">
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                  Animi nisi dignissimos debitis ratione sapiente saepe.
+                </blockquote>
+                <figure class="review__user">
+                  <img
+                    src="img/user-2.jpg"
+                    alt="user-1"
+                    class="review__user-photo"
+                  />
+                  <div class="review__user-box">
+                    <p class="review__user-name">Mary Williams</p>
+                    <p class="review__user-date">Aug 24, 2019</p>
+                  </div>
+                  <div class="review__user-rating">9.3</div>
+                </figure>
+              </figure>
+              <button class="btn-inline">Show More <span>&rarr;</span></button>
             </div>
+          </div>
+
+          <div class="cta">
+            <h2 class="cta__book-now">
+              Good news! We have 4 free rooms for your selected dates!
+            </h2>
+            <button class="btn">
+              <span class="btn__visible">Book Now</span>
+              <span class="btn__invisible">Only 4 rooms left</span>
+            </button>
           </div>
         </main>
       </div>
